@@ -1,3 +1,8 @@
+2017-07-21 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/SDCCralloc.hpp:
+	  Speed up register allocator a little bit.
+
 2017-07-20 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/stm8/gen.c:
